030-software/fluxcd/apps/cloudnativepg/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnpg-platform
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: cnpg-platform
  template:
    metadata:
      labels:
        app: cnpg-platform
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchLabels:
                    app: cnpg-platform
      serviceAccountName: cnpg-platform
      containers:
        - name: cnpg-platform
          image: ghcr.io/shokohsc/cnpg-platform:02450a6@sha256:d326d78d7b200de447ab3321aa3199447bf6b211ade9b8358fa996ebb19c845b
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          args:
            - --port=8080
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              port: http
              path: /healthz
          livenessProbe:
            tcpSocket:
              port: http
          startupProbe:
            tcpSocket:
              port: http
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 64Mi
