030-software/fluxcd/apps/cloudnativepg/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cnpg-platform
spec:
  selector:
    app: cnpg-platform
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
