030-software/fluxcd/apps/cloudnativepg/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cnpg-platform
spec:
  hostnames:
  - cnpg-platform.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: cnpg-platform
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
