030-software/fluxcd/apps/cloudnativepg/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: postgres
  annotations:
    external-dns.kubernetes.io/hostname: postgres.${domain}
spec:
  parentRefs:
    - name: cilium
      namespace: cilium
      sectionName: postgres
  rules:
    - backendRefs:
        - name: main-rw
          port: 5432
